--- a/_layouts/poi.html
+++ b/_layouts/poi.html
@@ -19,7 +19,7 @@ load_leaflet: 1
 
 <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 <script>var wikidatum = '{{page.wikidatum}}'</script>
-<script src="{{ base.url | prepend: site.url }}/assets/js/get_wiki_item.js"></script>
+<script src="{{ baseurl | prepend: site.url }}/assets/js/get_wiki_item.js"></script>
 
 <script src="https://unpkg.com/leaflet@1.8.0/dist/leaflet.js"
    integrity="sha512-BB3hKbKWOc9Ez/TAwyWxNXeoV9c1v6FIeYiBieIWkpLjauysF18NzgR1MBNBXf8/KABdlkX68nAhlwcDFLGPCQ=="
